--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
 		margin: 0;
 		padding: 0;
 		background-image: url('back.jpg');
-		background-size: 50% 100%;
+		background-size: cover;
 		background-position: right ;
 		background-repeat: no-repeat;
 		height: 100vh;
